# img2braille

./: .gitignore  README.md  pyproject.toml
img2braille/: __init__.py  binarization.py  cli.py  convert.py  dithering.py
tests/: test_convert.py
