[tool.poetry]
name = "img2braille"
version = "0.2.0"
description = ""
authors = ["d_etteiu8383 <ysdr83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pyproject-flake8 = "^6.0.0.post1"

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".venv", ".mypy_cache"]
extend-ignore = "E201"                                    # whitespace after '['

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
